--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
         <section class="bg-green-400 w-3/4	p-8 mx-auto mt-8 rounded">
             <h3 class="text-2xl mb-4  text-red-600 font-semibold">please login</h3>
             <div>
-                <input class="block mb-4 w-3/4 px-2 border rounded border-red-400" type="text" placeholder="your email:">
-                <input class=" mb-4 w-3/4 px-2 border rounded border-red-400 block" type="text" name="" id="" placeholder="password:">
-                <button class="bg-yellow-500  px-4 py-2 rounded text-white font-medium">Submit</button>
+                <input id="user-email" class="block mb-4 w-3/4 px-2 border rounded border-red-400" type="text" placeholder="your email:">
+
+                <input class=" mb-4 w-3/4 px-2 border rounded border-red-400 block" type="password" name="" id="user-password" placeholder="password:">
+
+                <button id="login-submit" class="bg-yellow-500  px-4 py-2 rounded text-white font-medium">Submit</button>
             </div>
             
         </section>
     </main>
         
-
+    <script src="bank.js"></script>
 </body>
 </html>
